--- a/controls.ipynb
+++ b/controls.ipynb
@@ -37,7 +37,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where"
+    "This is where your exposition goes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Code snippet\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Challenge: write a function that does a thing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def my_awesome_function(my_input):\n",
+    "    ## Your code goes here!\n",
+    "    \n",
+    "    return"
    ]
   }
  ],
